error_7041294.err
Loaded module: python3/3.6.2
  File "files.py", line 52
    <<<<<<< HEAD
    ^
IndentationError: expected an indented block
